fixes create map alignment

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -73,9 +73,10 @@ section.maps {
 **************/
 
 .create-form-container {
-  max-width: 70vw;
+  min-width: 500px;
+  max-width: 40vw;
   margin: 0 auto;
-  margin-top: 15vh;
+  margin-top: 12vh;
 }
 
 /**************
